--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ htmlcov/
 # Generated rescue plan artifacts (use docs/archive/ for historical copies)
 RESCUE_PLAN.json
 RESCUE_PLAN.md
+
+# Generated CI artifacts (produced by observer workflow, uploaded via actions/upload-artifact)
+artifacts/
