CBSP21 release-hardening: workflow, gates, BOM, changelog
- .github/workflows/release.yml: tag-driven release pipeline with 4 governance
  gates (tag↔pyproject version, CHANGELOG entry, template enforcement, semver
  breaking rule), build sdist+wheel, semantic BOM, GitHub Release, artifact upload
- scripts/build_release_manifest.py: semantic BOM generator capturing git state,
  version anchors (engine_v1, signals_v2, confidence_v1), schema hashes,
  manifest hashes; --strict mode enforces core manifests present
- scripts/check_changelog_has_tag.py: validates CHANGELOG.md entry exists for
  release tag; supports Keep a Changelog header variants; --require-date flag
- scripts/check_changelog_template.py: enforces 7 contract-axis declarations
  (Schema, Signals, Rule registry, Exit codes, Confidence, Web API, Breaking)
  with alias matching and --require-bullets flag
- scripts/check_semver_breaking_gate.py: enforces Breaking:yes→MAJOR bump,
  Breaking:no→no MAJOR bump, Breaking:yes→at least one axis is yes; skips
  major-bump check on first release (no previous tag)
- CHANGELOG.md: scaffold with Unreleased + 0.1.0 sections, template docs

Also includes prior-session work:
- Vue analyzers (vue_component.py, vue_coupling.py) + tests
- CI-mode environment lock (ci_mode.py) + test
- Exit-code policy contract (exit_codes.py) + tests + manifest
- Confidence golden manifest + refresh script + test
- Subprocess-based CLI determinism tests
- pyproject.toml updates (dev deps, test config)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,10 @@ pythonpath = [".", "src"]
 target-version = "py311"
 line-length = 100
 
+[tool.code_audit.confidence]
+# Governed section — changes here require confidence_logic_version bump.
+# Empty is fine; the section's existence ensures future config has a place.
+
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]
 
