--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -49,6 +49,20 @@ jobs:
         shell: bash
         run: bash ci/enforce_schema_version_bump.sh
 
+      - name: Validate OpenAPI snapshot (spec)
+        run: python scripts/validate_openapi_snapshot.py docs/openapi.json
+
+      - name: Check OpenAPI snapshot freshness
+        run: python scripts/refresh_openapi_snapshot.py
+
       - name: Run tests
         run: |
           python -m pytest -q
+
+      - name: Upload OpenAPI scrub audit report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: openapi-scrub-audit
+          path: tests/contracts/openapi_scrub_audit_report.json
+          if-no-files-found: ignore
